--- a/style.css
+++ b/style.css
@@ -14,7 +14,7 @@ body::-webkit-scrollbar{
   height: 100vh;
   width: 100%;
   /* background-image: url('images/work copy.png'); */
-  background-color: #C2F1FF;
+  background-color: #ffffff;
   background-size: cover;
   background-position: center;
 }
@@ -26,8 +26,10 @@ nav{
   padding-top: 35px;
   padding-left: 4%;
   padding-right: 4%;
-}
+  padding-bottom: 35px;
+  background-image: linear-gradient(to top, transparent, #f3f3f3, #47b2fa);
 
+}
 
 
 nav ul li{
@@ -49,7 +51,6 @@ nav ul li a:hover{
   transition: .7s;
   text-decoration: none;
   padding: 0px 15px 0px 15px;
-  text-shadow: 0px 0px 30px #ffffff;
 }
 
 
@@ -69,6 +70,35 @@ nav ul li a:hover{
   transform: scale(1.2);
 }
 
+
+
+.search-form {
+  display: flex;
+  align-items: center;
+  margin: 10px;
+}
+
+.search-form input[type="text"] {
+  flex: 1;
+  padding: 10px;
+  border: none;
+  border-radius: 5px;
+  font-size: 16px;
+}
+
+.search-form button[type="submit"] {
+  background-color: #555;
+  color: #fff;
+  border: none;
+  border-radius: 5px;
+  padding: 10px 20px;
+  font-size: 16px;
+  margin-left: 10px;
+  cursor: pointer;
+}
+
+
+
 .content {
   display: flex;
   justify-content: space-between;
@@ -78,9 +108,9 @@ nav ul li a:hover{
 
 .content img {
   height: auto;
-  width: 450px;
+  width: 440px;
   margin-right: 80px;
-  margin-bottom: 60px;
+  margin-bottom: 150px;
 }
 
 .content img:hover{
@@ -127,15 +157,15 @@ h2 {
 }
 
 h3 {
-  color: rgb(255, 102, 0);
+  color: rgb(255, 148, 61);
   font-size: 15px;
   font: 'Roboto', sans-serif;
-  margin-bottom: 80px;
+  margin-bottom: 150px;
   margin-left: 250px;
 }
 
 span {
-  background-image: linear-gradient(to right, #0a37b3, #11ecbd);
+  background-image: linear-gradient(to right, rgb(185, 20, 190), #2758df, #11ecbd);
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
   font-family: 'Courier New', Courier, monospace;
@@ -323,7 +353,7 @@ th {
 }
 
 .hobbies .row .col-sm-4 h5 {
-  text-shadow: 0px 0px 11px rgb(7, 119, 95), 0px 0px 40px #54f8d5;
+  text-shadow: 0px 0px 40px #54f8d5;
   font-size: 24px;
   color: #ffffff;
   margin-bottom: 20px;
